tests/ui/coroutine/static-not-unpin.current.stderr
error[E0277]: `{static coroutine@$DIR/static-not-unpin.rs:15:25: 15:34}` cannot be unpinned
  --> $DIR/static-not-unpin.rs:18:18
   |
LL |     assert_unpin(coroutine);
   |     ------------ ^^^^^^^^^ the trait `Unpin` is not implemented for `{static coroutine@$DIR/static-not-unpin.rs:15:25: 15:34}`
   |     |
   |     required by a bound introduced by this call
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required by a bound in `assert_unpin`
  --> $DIR/static-not-unpin.rs:11:20
   |
LL | fn assert_unpin<T: Unpin>(_: T) {
   |                    ^^^^^ required by this bound in `assert_unpin`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
